--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ iniconfig==2.0.0
 packaging==23.2
 pluggy==1.4.0
 pytest==8.0.0
+pytest-django==4.8.0
 python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
